==> lucky401/buzzer-rtc-arduino/lib/virtuabotixRTC/virtuabotixRTC.cpp <==
#include "virtuabotixRTC.h" //|
#define DS1302_SCLK_PIN SCLK // Arduino pin for the Serial Clock                  //|
#define DS1302_IO_PIN IO     // Arduino pin for the Data I/O                      //|
#define DS1302_CE_PIN C_E    // Arduino pin for the Chip Enable                   //|
#define bcd2bin(h, l) (((h)*10) + (l)) //|
#define bin2bcd_h(x) ((x) / 10)        //|
#define bin2bcd_l(x) ((x) % 10)        //|
#define DS1302_SECONDS 0x80           //|
#define DS1302_MINUTES 0x82           //|
#define DS1302_HOURS 0x84             //|
#define DS1302_DATE 0x86              //|
#define DS1302_MONTH 0x88             //|
#define DS1302_DAY 0x8A               //|
#define DS1302_YEAR 0x8C              //|
#define DS1302_CLOCK_BURST 0xBE       //|
#define DS1302_CLOCK_BURST_WRITE 0xBE //|
#define DS1302_CLOCK_BURST_READ 0xBF  //|
#define DS1302_RAMSTART 0xC0          //|
#define DS1302_RAMEND 0xFC            //|
#define DS1302_RAM_BURST 0xFE         //|
#define DS1302_RAM_BURST_WRITE 0xFE   //|
#define DS1302_RAM_BURST_READ 0xFF    //|
#define DS1302_D0 0 //|
#define DS1302_D1 1 //|
#define DS1302_D2 2 //|
#define DS1302_D3 3 //|
#define DS1302_D4 4 //|
#define DS1302_D5 5 //|
#define DS1302_D6 6 //|
#define DS1302_D7 7 //|
#define DS1302_READBIT DS1302_D0 // READBIT=1: read instruction                  //|
#define DS1302_RC DS1302_D6 //|
#define DS1302_CH DS1302_D7 // 1 = Clock Halt, 0 = start                    //|

void virtuabotixRTC::_DS1302_start(void)
{                                     //|    |
  digitalWrite(DS1302_CE_PIN, LOW);   // default, not enabled                            //|    |
  pinMode(DS1302_CE_PIN, OUTPUT);     //|    |
                                      //|    |
  digitalWrite(DS1302_SCLK_PIN, LOW); // default, clock low                              //|    |
  pinMode(DS1302_SCLK_PIN, OUTPUT);   //|    |
                                      //|    |
  pinMode(DS1302_IO_PIN, OUTPUT);     //|    |
                                      //|    |
  digitalWrite(DS1302_CE_PIN, HIGH);  // start the session                               //|    |
  delayMicroseconds(4);               // tCC = 4us                                       //|    |
}

void virtuabotixRTC::_DS1302_stop(void)
{ //|    |
  // Set CE low                                                                                          //|    |
  digitalWrite(DS1302_CE_PIN, LOW); //|    |
                                    //|    |
  delayMicroseconds(4);             // tCWH = 4us                                    //|    |
}

uint8_t virtuabotixRTC::_DS1302_toggleread(void)
{                  //|    |
  uint8_t i, data; //|    |
  data = 0;        //|    |
                   //|    |
                   // Issue a clock pulse for the next databit.  If the 'togglewrite' function was used before this         //|    |
                   //  function, the SCLK is already high.                                                                  //|    |
  for (i = 0; i <= 7; i++)
  {                                      //|    |
    digitalWrite(DS1302_SCLK_PIN, HIGH); //|    |
    delayMicroseconds(1);                //|    |
                                         //|    |
    // Clock down, data is ready after some time.                                                        //|    |
    digitalWrite(DS1302_SCLK_PIN, LOW); //|    |
    delayMicroseconds(1);               // tCL=1000ns, tCDD=800ns                   //|    |
                                        //|    |
    // read bit, and set it in place in 'data' variable                                                  //|    |
    bitWrite(data, i, digitalRead(DS1302_IO_PIN)); //|    |                                                                                                 //|    |
  }                                                //|    |
  return (data);                                   //|    |
}

void virtuabotixRTC::_DS1302_togglewrite(uint8_t data, uint8_t release)
{        //|    |
  int i; //|    |
         //|    |
  for (i = 0; i <= 7; i++)
  { //|    |
    // set a bit of the data on the I/O-line                                                             //|    |
    digitalWrite(DS1302_IO_PIN, bitRead(data, i)); //|    |
    delayMicroseconds(1);                          // tDC = 200ns                           //|    |
                                                   //|    |
    // clock up, data is read by DS1302                                                                  //|    |
    digitalWrite(DS1302_SCLK_PIN, HIGH); //|    |
    delayMicroseconds(1);                // tCH = 1000ns, tCDH = 800ns            //|    |
                                         //|    |
                                         //  If this write is followed by a read, the I/O-line should be released after the last bit, before the  //|    |
                                         //  clock line is made low.  This is according the datasheet.  I have seen other programs that don't     //|    |
                                         //  release the I/O-line at this moment, and that could cause a shortcut spike on the I/O-line.          //|    |
    if (release && i == 7)
    {                                //|    |
      pinMode(DS1302_IO_PIN, INPUT); //|    |
    }
    else
    {                                     //|    |
      digitalWrite(DS1302_SCLK_PIN, LOW); //|    |
      delayMicroseconds(1);               // tCL=1000ns, tCDD=800ns                //|    |
    }                                     //|    |
  }                                       //|    |
}
