==> letrungkim/Digital-Clock-with-AVR-Microcontroller/Clock with Time Keeper using RTC DS1302/Assignment Ver_2/virtuabotixRTC.cpp <==
#include "virtuabotixRTC.h"
#include <avr/io.h>
#include <util/delay.h>
#define DS1302_SCLK_PIN   SCLK                // Serial Clock CLK Pin
#define DS1302_IO_PIN     IO                  // the Data I/O DAT Pin
#define DS1302_CE_PIN     C_E                 // the Chip Enable RST Pin
#define bcd2bin(h,l)    (((h)*10) + (l))
#define bin2bcd_h(x)   ((x)/10)
#define bin2bcd_l(x)    ((x)%10)
#define DS1302_SECONDS           0x80
#define DS1302_MINUTES           0x82
#define DS1302_HOURS             0x84
#define DS1302_DATE              0x86
#define DS1302_MONTH             0x88
#define DS1302_DAY               0x8A
#define DS1302_YEAR              0x8C
#define DS1302_CLOCK_BURST       0xBE
#define DS1302_CLOCK_BURST_WRITE 0xBE
#define DS1302_CLOCK_BURST_READ  0xBF
#define DS1302_RAMSTART          0xC0
#define DS1302_RAMEND            0xFC
#define DS1302_RAM_BURST         0xFE
#define DS1302_RAM_BURST_WRITE   0xFE
#define DS1302_RAM_BURST_READ    0xFF
#define DS1302_D0 0
#define DS1302_D1 1
#define DS1302_D2 2
#define DS1302_D3 3
#define DS1302_D4 4
#define DS1302_D5 5
#define DS1302_D6 6
#define DS1302_D7 7
#define DS1302_READBIT DS1302_D0                         // READBIT=1: read instruction
#define DS1302_RC DS1302_D6
#define DS1302_CH DS1302_D7                              // 1 = Clock Halt, 0 = start
#define DS1302_AM_PM DS1302_D5                           // 0 = AM, 1 = PM
#define DS1302_12_24 DS1302_D7                           // 0 = 24 hour, 1 = 12 hour

void virtuabotixRTC::_DS1302_start( void )  {
  PORTD &= ~(1 << DS1302_CE_PIN)|(1 << DS1302_SCLK_PIN);	// By default, PIN RST & CLK are disable     
  DDRD |= (1 << DS1302_CE_PIN)|(1 << DS1302_SCLK_PIN)|(1 << DS1302_IO_PIN) ; // Output PIND 5, 6, 7 for CLK, Data, RST Pin respectively 
  PORTD |= (1 << DS1302_CE_PIN);							// start the session
  _delay_ms(4)    ;											// tCC = 4ms
}

void virtuabotixRTC::_DS1302_stop( void )  {
  PORTD &= ~(1 << DS1302_CE_PIN); // Turn off PIN RST
  _delay_ms(4);                   // tCWH = 4ms
}

uint8_t virtuabotixRTC::_DS1302_toggleread( void )  {
  uint8_t i, data;
  data = 0;

// Issue a clock pulse for the next databit.  If the 'togglewrite' function was used before this
// function, the SCLK is already high.
  for( i = 0; i <= 7; i++ )  {   
	PORTD |= (1 << DS1302_SCLK_PIN);
	_delay_ms(1);
	
    // Clock down, data is ready after some time.
    PORTD &=~ (1 << DS1302_SCLK_PIN);  
	_delay_ms(1);

    // read bit, and set it in place in 'data' variable
	bitWrite( data, i,  (PIND & (1<<DS1302_IO_PIN)));                                                                                              //|    |
  }
  return( data );
}

void virtuabotixRTC::_DS1302_togglewrite( uint8_t data, uint8_t release)  {               
	int i;                                                                                       
                                                                                           
	for( i = 0; i <= 7; i++ )  {                                                                     
    // set a bit of the data on the I/O-line                                                                                                        
	if(bitRead(data, i))
	{
		PORTD |= (1 << DS1302_IO_PIN);
	}else PORTD &= ~(1 << DS1302_IO_PIN);
    _delay_ms(1);                                                                                   
    // clock up, data is read by DS1302                             
	PORTD |= (1 << DS1302_SCLK_PIN);
    _delay_ms(1);      
                                                                                                         
//  If this write is followed by a read, the I/O-line should be released after the last bit, before the  
//  clock line is made low.  This is according the datasheet. If I/O line would not be released, a shortcut spike on the I/O-line could happen.         
    if( release && i == 7 )  {                                                                           
	  DDRD &= ~(1 << DS1302_IO_PIN) ;                                                                
    }  else  {                                                                                           
	  PORTD &= ~(1 << DS1302_SCLK_PIN) ;                                                            
	   _delay_ms(1);
    }                                                                                                    
  }                                                                                                      
}
